# pystreng

./: .gitignore  404.html  Makefile  Untitled.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  test.py
.github/workflows/: ci.yml  pages.yml
.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
api/: index.html
docs/: __init__.py  api.md  examples.ipynb  index.md
docs/assets/stylesheets/: extra.css
docs/codes/eurocode2/: shear.md
docs/codes/eurocode3/: shear.md
docs/javascripts/: mathjax-handler.js  mathjax.js
docs/jupyters/: examples.ipynb
jupyters/: Untitled.ipynb  Untitled1.ipynb
jupyters/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb
scripts/: dev-install.ps1  makeall.ps1
search/: search_index.json
shear/: index.html
src/pystreng/: tempfuncs.py
src/pystreng/codes/eurocodes/ec2/ch6/: shear.py
tests/: conftest.py  test_shear.py
