[project]
name = "pystreng"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "panagop", email = "gpanagop@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[project.optional-dependencies]
# Developer extras installed with uv in developer/editable mode: `uv install -e '.[dev]'`
dev = [
    "ruff",
    "pytest",
    "build",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "numpydoc",
    "docformatter",
    "pydocstyle",
]

[tool.ruff]
line-length = 88

[tool.docformatter]
wrap-summaries = true
wrap-descriptions = true




